--- a/style.css
+++ b/style.css
@@ -39,4 +39,8 @@ body {
     border-style: solid;
     border-radius: 25px;
     margin: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
 }
