--- a/style.css
+++ b/style.css
@@ -26,6 +26,11 @@ body {
     border-style: solid;
     border-radius: 25px;
     margin: 20px;
+    font-size: 100px;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    padding-right: 20px;
 }
 
 .key{
